[package]
name = "etherage"
categories = ["science::robotics", "network-programming"]
authors = ["Jimy Byerley <jimy.byerley@gmail.com>", "CendreQuasar540"]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An EtherCAT master in pure-Rust very close to the ethercat nature"
keywords = ["ethercat", "ethernet", "realtime", "robotics", "servodrive"]
url = "https://github.com/jimy-byerley/etherage"
resolver = "2"

[dependencies]
heapless = "^0.7.16"
log = "^0.4.17"
futures-concurrency = "^7.2.1"
packed_struct = { version = "^0.10.0", default-features = false }
tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
ioprio ="^0.2.0"
bilge = "^0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2.134"
thread-priority = "0.13.1"

[dev-dependencies]
env_logger = "^0.10.0"
ctrlc = "^3.2.3"
